--- a/webapp/WEB-INF/views/first/goodbye.html
+++ b/webapp/WEB-INF/views/first/goodbye.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 Goodbye !!!
-<a href="/hello">Say Hello )))</a>
+<a href="/hello">Say Hello )))</a> or <a href="/exit">Exit</a>
 </body>
 </html>
