--- a/webapp/WEB-INF/views/first/hello.html
+++ b/webapp/WEB-INF/views/first/hello.html
@@ -7,5 +7,6 @@
 <body>
 Hello !!!
 <a href="/goodbye">Say goodbye(((</a> or <a href="/exit">Exit</a>
+<a href="/first/hello?name=John&surname=Black">Request with parameters</a>
 </body>
 </html>
