passing data from controller to view via model

--- a/webapp/WEB-INF/views/first/hello.html
+++ b/webapp/WEB-INF/views/first/hello.html
@@ -8,5 +8,8 @@
 Hello !!!
 <a href="/goodbye">Say goodbye(((</a> or <a href="/exit">Exit</a>
 <a href="/first/hello?name=John&surname=Black">Request with parameters</a>
+
+<p th:text="${message}"></p>
+
 </body>
 </html>
